# movie-recs

./: .env.example  .gitignore  README.md  create-repo-structure.sh
.devcontainer/: devcontainer.json
.devcontainer/backend-dotnet/: Dockerfile  devcontainer.json  docker-compose.overrides.yml  post-create.sh
.devcontainer/frontend-node/: devcontainer.json  docker-compose.overrides.yml  post-create.sh
.devcontainer/full-stack/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.devcontainer/ml-python/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: data-pipeline-ci.yml
dotnet-model-api/: MovieModel.Api.sln
python-ml/: =1.2.0  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py
python-ml/configs/: data_config.yaml
python-ml/src/: __init__.py  acquisition.py  constitutional_ai_validator.py  data_prep.py  feature_utils.py  movie_schema.py  movie_validators.py  preprocessing.py  schema.py  tmdb_client.py  validation.py
python-ml/tests/: test_acquisition.py  test_constitutional_ai_tmdb.py  test_constitutional_ai_validator.py  test_data_prep.py  test_enhanced_tmdb_client.py  test_integration.py  test_movie_schema.py  test_movie_validators.py  test_preprocessing.py  test_requirements_validation.py  test_tmdb_integration.py  test_validation.py
python-ml/tests/fixtures/: bias_test_data.json  bias_test_scenarios.json  invalid_movie_data.json  malformed_data.json  movie_test_data.json  sample_movies.json  tmdb_responses.json
python-ml/tests/test_utils/: tmdb_mock.py
scripts/: setup-dev.sh
