[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recs-ml"
version = "0.1.0"
description = "Machine Learning components for MovieRecs GenAI application"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "mlflow>=2.0.0",
    "onnx>=1.12.0",
    "onnxruntime>=1.13.0"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "black",
    "flake8",
    "pre-commit"
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"